--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <script>
         $(document).ready(function () {
-            const liffId = "2006372055-wXNB0b9Q";
+            const liffId = "2004976074-Da1L40Lm";
             initializeLiff(liffId);
         });
 
