--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <script>
         $(document).ready(function () {
-            const liffId = "2006372055-O1K6qyZd";
+            const liffId = "2004976074-Bl7Wa5Ww";
             initializeLiff(liffId);
         });
 
